2/17/12 make distance between light and cuvette something that's easy to measure (1.5cm)
2/17/12 add "Concentration" flavor to this project
2/16/12 use white text on detector
2/16/12 change Kool-Aid to "Drink mix"
2/16/12 add unlabeled major ticks to ruler at 1/2 cm increments
2/14/12 delete attempt at using HSliderNode node for concentration slider
2/14/12 add concentration slider, not wired up yet
2/14/12 add ruler to model, to take advantage of resetting its location on Reset All
2/14/12 flesh out concentration control a bit more
2/14/12 change units on concentration control to match appropriate units for specific solution
2/14/12 hide concentration control for pure water
2/14/12 base class for solutions
2/14/12 add stroke around color chips in combo boxes, sames as for fluids
2/14/12 add pure water to the list of solutions (even though it's not technically a solution)
2/14/12 use different solution models for the 2 tabs, needs are very different
2/11/12 add wire to AT detector, standardize wire colors
2/11/12 preliminary pass at AT detector
2/11/12 debug node that display model and view locations
2/9/12 make center of concentration probe transparent, so you can see the fluid that the crosshairs are on [61163]
2/9/12 fix: concentration meter continues to read a value after dropper is turned off
# 0.00.09 (61151) Feb 9, 2012
2/9/12 change request: make concentration meter cable curvy (ala Bending Light)
2/9/12 change request: move initial location of concentration probe below left of body (outside beaker)
2/6/12 add location to Light model
2/6/12 use public CompositeProperty for derived properties
2/6/12 placeholder for concentration control
2/6/12 reuse the Solute combo box for Solutions, parameterize the format of the combo box item labels
2/6/12 first pass at drag handle for cuvette width, has a few warts
2/2/12 add images for absorbance meter
2/2/12 change color of concentration meter/probe/wire, so it's different from absorbance meter